# ucf_desktop

./: .gitignore  Book3.xlsb  README.md  agent.py  pyproject.toml  read_xlsb.py  sample.csv  sample.xlsb  web_server.py
.claude/: launch.json
.ucf_desktop/: config.json
database/冷蔵庫/r_h54xg_b/: r_h54xg_b.json  r_h54xg_b_embeddings.json
database/冷蔵庫/r_hws47x_b/: r_hws47x_b.json  r_hws47x_b_embeddings.json
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/renderer/: index.html  renderer.js  styles.css  web-agent.js
pdf/: analyzer.py  converter.py  document_processor.py  embeddings.py  file_manager.py  migration.py
skills/P1/: SKILL.md
skills/P1/scripts/: read_xlsb.py
skills/code-review/: SKILL.md
skills/commit-message/: SKILL.md
skills/rag/: SKILL.md
skills/rag/scripts/: list_tree.py  search_json.py
skills/rag/utils/: prompt_loader.py
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py  validate_skill.py
skills/word-skill/: SKILL.md
skills/word-skill/scripts/: word_skill.py
skills/xlsb-reader/: agent.py
